# Hidden_Markov_Miracles

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
Old results/: nn_metrics_test_1980__20250321.csv  nn_metrics_train_1980__20250321.csv  nn_metrics_validation_1980__20250321.csv
configs/: config.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
metrics/: hmnn_metrics_train_1980__20250321.csv  hmnn_metrics_val_1980__20250321.csv
models/: neural_network_model.pth  updated_hmnn_model_1981_1995.pth  updated_hmnn_model_1982_1996.pth  updated_hmnn_model_1983_1997.pth  updated_hmnn_model_1984_1998.pth  updated_hmnn_model_1985_1999.pth  updated_hmnn_model_1986_2000.pth  updated_hmnn_model_1987_2001.pth  updated_hmnn_model_1988_2002.pth  updated_hmnn_model_1989_2003.pth  updated_hmnn_model_1990_2004.pth  updated_hmnn_model_1991_2005.pth  updated_hmnn_model_1992_2006.pth  updated_hmnn_model_1993_2007.pth  updated_hmnn_model_1994_2008.pth  updated_hmnn_model_1995_2009.pth  updated_hmnn_model_1996.pth  updated_hmnn_model_1996_2010.pth  updated_hmnn_model_1997.pth  updated_hmnn_model_1997_2011.pth  updated_hmnn_model_1998.pth  updated_hmnn_model_1998_2012.pth  updated_hmnn_model_1999.pth  updated_hmnn_model_1999_2013.pth  updated_hmnn_model_2000_2014.pth  updated_hmnn_model_2001.pth  updated_hmnn_model_2001_2015.pth  updated_hmnn_model_2002.pth  updated_hmnn_model_2002_2016.pth  updated_hmnn_model_2003.pth  updated_hmnn_model_2003_2017.pth  updated_hmnn_model_2004.pth  updated_hmnn_model_2004_2018.pth  (+14 more)
tests/: test_data.py
(+758 files in other folders)
